--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -33,7 +33,7 @@ a, a:active {
 
   .menu-notification-count {
     animation: pulse 4s infinite;
-    background-color: #00b2a8;
+    background-color: red;
     color: #ffffff;
     position: absolute;
     //width: 20px;
