--- a/frontend/src/app/components/notification/notification.component.html
+++ b/frontend/src/app/components/notification/notification.component.html
@@ -1,23 +1,57 @@
 <div class=" notifications-wrapper" ngxUiLoaderBlurred>
 
 
-    <div class="container" *ngIf="content && content.length==0">
-        <p class="text-center no-notifications">Уведомлений не найдено!</p>
-    </div>
-    <div class="container" *ngIf="content && content.length>0">
-        <div *ngFor="let item of content">
-            <mdb-card class="app-card notification-card ">
-                <div class="d-flex justify-content">
-                    <b class="card-title">
-                        {{item?.notification?.notificationType?.name}}
-                    </b>
-                    <span class="card-header-dat">{{item?.notification?.messageDate|date:'mm:hh dd.MM.yyyy'}}</span>
-                </div>
-                <div class="clearfix notification-message">
-                    <p [innerHTML]="sanitize(item?.notification?.message)"></p>
-                </div>
-            </mdb-card>
+  <mdb-card class="app-card notification-card-filter">
+    <mdb-card-header>Центр уведомления</mdb-card-header>
+    <mdb-card-body>
 
-        </div>
-    </div>
+    </mdb-card-body>
+  </mdb-card>
+
+  <table mdbTable #tableEl="mdbTable" stickyHeader="true" hover="true" striped="true" class="z-depth-1">
+    <thead class="sticky-top">
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Описание</th>
+      <th scope="col">Дата уведомления</th>
+      <th scope="col">Статус</th>
+    </tr>
+    </thead>
+    <tbody #row>
+    <tr *ngFor="let item of content; let i = index">
+      <th>
+        <span *ngIf="!item?.isOpened" class="new-notify fa fa-circle"> </span>
+        {{item.id}}
+      </th>
+      <th>{{item?.notification?.notificationType?.name}}</th>
+      <th>{{item?.notification?.messageDate|date:'dd.MM.yyyy      hh:mm'}}</th>
+      <th>
+        <b *ngIf="item?.isOpened">Прочитано</b>
+        <b *ngIf="!item?.isOpened" class="new-notify">Новое</b>
+      </th>
+    </tr>
+    </tbody>
+  </table>
+  <!--  <div>
+      <div>
+        <mdb-card class="app-card notification-card ">
+          <mdb-card-header>Центр уведомления</mdb-card-header>
+          <mdb-card-body>
+            <div *ngFor="let item of content">
+              <div class="d-flex justify-content">
+                <b class="card-title">
+                  {{item?.notification?.notificationType?.name}}
+                </b>
+                <span class="card-header-dat">{{item?.notification?.messageDate|date:'mm:hh dd.MM.yyyy'}}</span>
+              </div>
+              <div class="clearfix notification-message">
+                <p [innerHTML]="sanitize(item?.notification?.message)"></p>
+              </div>
+              <th>
+            </div>
+          </mdb-card-body>
+        </mdb-card>
+
+      </div>
+    </div>-->
 </div>
