--- a/frontend/src/app/components/notification/notification.component.scss
+++ b/frontend/src/app/components/notification/notification.component.scss
@@ -17,6 +17,36 @@
 }
 
 .new-notify.fa.fa-circle {
-   font-size: 10px;
+  font-size: 10px;
   padding-right: 5px;
+}
+
+.notification-filter-form {
+  .form-control-label {
+    display: block;
+  }
+
+  .col-md-2 {
+    float: left;
+  }
+}
+
+.btn__find {
+  background-color: #00b2a8;
+  color: #ffffff;
+}
+
+.notification-body {
+  padding: 10px 0;
+  margin-top: 5px;
+}
+
+.td-id span{
+  margin-left: 3px;
+  margin-right: 3px;
+}
+
+.notify-circle-wrapper {
+  width: 20px;
+  display: inline-block;
 }
