--- a/frontend/src/app/components/notification/notification.component.html
+++ b/frontend/src/app/components/notification/notification.component.html
@@ -11,19 +11,19 @@
                 </div>
                 <div class="col-md-2">
                     <label class="form-control-label">&nbsp;</label>
-                    <input formControlName="dateBeg" class=" form-control " type="text" placeholder="По"/>
+                    <input formControlName="dateEnd" class=" form-control " type="text" placeholder="По"/>
                 </div>
                 <div class="col-md-2">
                     <label class="form-control-label">Статус</label>
-                    <input formControlName="dateBeg" class=" form-control " type="text"/>
+                    <input formControlName="status" class=" form-control " type="text"/>
                 </div>
                 <div class="col-md-2">
                     <label class="form-control-label">Описание</label>
-                    <input formControlName="dateBeg" class=" form-control " type="text"/>
+                    <input formControlName="notificationType" class=" form-control " type="text"/>
                 </div>
                 <div class="col-md-2">
                     <label class="form-control-label">ID завки</label>
-                    <input formControlName="dateBeg" class=" form-control " type="text"/>
+                    <input formControlName="id" class=" form-control " type="text"/>
                 </div>
             </div>
         </div>
