--- a/frontend/src/app/components/notification/notification.component.html
+++ b/frontend/src/app/components/notification/notification.component.html
@@ -7,11 +7,11 @@
             <div class=" form-container notification-filter-form" [formGroup]="formGroup">
                 <div class="col-md-2">
                     <label class="form-control-label">Дата создания</label>
-                    <input formControlName="dateBeg" class=" form-control " type="text" placeholder="С"/>
+                    <input formControlName="dateBeg" class=" form-control " type="text" placeholder="С"  bsDatepicker #ru="bsDatepicker"/>
                 </div>
                 <div class="col-md-2">
                     <label class="form-control-label">&nbsp;</label>
-                    <input formControlName="dateEnd" class=" form-control " type="text" placeholder="По"/>
+                    <input formControlName="dateEnd" class=" form-control " type="text" placeholder="По"  bsDatepicker #ru="bsDatepicker"/>
                 </div>
                 <div class="col-md-2">
                     <label class="form-control-label">Статус</label>
