--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -1529,7 +1529,7 @@
         bindValue="value"
         bindLabel="label"
         [items]="districts"
-        [(ngModel)]="formRes.buildingDto.districts">
+        [(ngModel)]="formRes.buildingDto.districtId">
       </ng-select>
     </div>
     <div class="col-sm" *ngIf="resident">
