--- a/frontend/src/app/components/notification/notification.component.scss
+++ b/frontend/src/app/components/notification/notification.component.scss
@@ -31,11 +31,6 @@
   }
 }
 
-.btn__find {
-  background-color: #00b2a8;
-  color: #ffffff;
-}
-
 .notification-body {
   padding: 10px 0;
   margin-top: 5px;
@@ -49,4 +44,20 @@
 .notify-circle-wrapper {
   width: 20px;
   display: inline-block;
+}
+
+.search-btn {
+  width: 200px;
+  border-radius: 5px;
+}
+
+.clear-btn {
+  width: 200px;
+  border-radius: 5px;
+}
+
+.operation-type {
+  border-radius: 0.3125rem;
+  border: 1px solid #d0d0d0;
+  margin-right: 0.3125rem;
 }
