стилизовал селект Полный адрес

--- a/frontend/src/app/components/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/components/claims/create-claim/create-claim.component.html
@@ -494,6 +494,7 @@
                         <span class="text-danger" *ngIf="!applicationForm.postcode">&nbsp;*</span>
                       </label>
                       <ng-select
+                        class="postcode-select"
                         [items]="kazPost"
                         [searchFn]="customSearchFn"
                         (search)="getDataKzPost($event)"
