--- a/frontend/src/app/components/detailing/detailing.component.html
+++ b/frontend/src/app/components/detailing/detailing.component.html
@@ -796,7 +796,7 @@
                   </tbody>
                 </table>
 
-                <h3 class="text-center" *ngIf="empty">Нет данных для отображения</h3>
+                <!--<h3 class="text-center" *ngIf="empty">Нет данных для отображения</h3>-->
 
                 <!--<pagination [(ngModel)]="currentPage"-->
                             <!--[totalItems]="totalItems"-->
