--- a/frontend/src/app/components/notification/notification.component.scss
+++ b/frontend/src/app/components/notification/notification.component.scss
@@ -34,9 +34,10 @@
 .notification-body {
   padding: 10px 0;
   margin-top: 5px;
+  max-width: 600px;
 }
 
-.td-id span{
+.td-id span {
   margin-left: 3px;
   margin-right: 3px;
 }
@@ -60,4 +61,23 @@
   border-radius: 0.3125rem;
   border: 1px solid #d0d0d0;
   margin-right: 0.3125rem;
+}
+
+.answer-btn-wrapper {
+  text-align: right;
+  padding-top: 10px;
+}
+
+.answer-wrapper {
+
+  textarea {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
+.answer-wrapper b, .answer-btn-wrapper b {
+  padding: 3px;
+  display: inline-block;
+  cursor: pointer;
 }
